# ladder

./: .gitignore  .gitmodules  README.md  authors_mitigate.txt  classifier_zoo.md  dataset_zoo.md  environment.yaml  mammo_rad_report.csv  preprocess_image_to_png_kaggle.py  pyproject.toml  run.sh
data/metashift/: metadata_metashift.csv  va_metadata_metashift_captioning_blip.csv  va_metadata_metashift_captioning_gpt.csv
examples/: custom_dataset.py  custom_training_params.py  rsna_pipeline.py  rsna_train copy.py  rsna_train.py  switch_backbone.py  vindr_pipeline.py
hf-tmp/: snapshot_download.py
out_api/ViNDr/fold0/: seed_10_train_configs.pkl
src/codebase/: compare_mammo_datasets.py  discover_error_slices.py  evaluate.py  learn_aligner.py  mammo_metrics.py  mitigate_error_slices.py  save_img_reps.py  save_text_reps.py  train_classifier_CXR.py  train_classifier_Mammo.py  validate_error_slices_w_LLM.py
src/codebase/Classifiers/: experiments_RSNA.py
src/codebase/SubpopBench-main/: download.sh  scripts_bash_celebA.sh  scripts_bash_metashift.sh  scripts_bash_nih.sh  scripts_bash_waterbirds.sh  scripts_bash_waterbirds_DFR_1.sh  scripts_bash_waterbirds_DFR_2.sh  scripts_bash_waterbirds_DRO_1.sh  scripts_bash_waterbirds_DRO_2.sh  scripts_bash_waterbirds_ERM.sh  scripts_bash_waterbirds_JTT_1.sh  (+2 more)
src/ladder_api/: __init__.py  aligner.py  compat.py  config.py  error_slices.py  mitigation.py  pipeline.py  reps.py  train.py
tests/: conftest.py  test_aligner.py  test_config.py  test_error_slices.py  test_mitigation.py  test_pipeline.py  test_reps.py  test_train.py
(+125 files in other folders)
